--- a/styles copy.css
+++ b/styles copy.css
@@ -8,13 +8,12 @@
 }
 
 body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  min-height: 100vh;
   background-color: #c5e4e7;
   color: #5e7a7d;
   font-family: "Space Mono", monospace;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -24,13 +23,10 @@ body {
 }
 
 .site {
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100vh;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -44,45 +40,37 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
 }
 
 .site-header__logo {
-  margin: 2.5rem;
-}
-
-.form,
-.result-cnt {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 100%;
-          flex: 1 1 100%;
+  margin: 3rem;
 }
 
 .site-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 1.75rem;
-  border-radius: 1.5rem 1.5rem 0 0;
+  padding: 2rem;
+  border-radius: 20px 20px 0 0;
   background-color: white;
-  -webkit-box-shadow: 10px 10px 1.5rem -15px #7f9c9f;
-          box-shadow: 10px 10px 1.5rem -15px #7f9c9f;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 1rem;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -webkit-box-shadow: 10px 10px 20px -15px #7f9c9f;
+          box-shadow: 10px 10px 20px -15px #7f9c9f;
 }
 
 .form__input--as-btn, .form__label--as-btn {
   display: inline-block;
   width: 100%;
-  padding: 0.5rem 0;
+  padding: 6px;
   border-radius: 6px;
-  font-size: 1.5rem;
+  font-size: 24px;
   font-weight: 700;
   cursor: pointer;
 }
@@ -107,7 +95,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 0 0.5rem;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -142,7 +129,7 @@ body {
   background-color: #f4fafa !important;
   color: #00494d;
   font-family: 'Space Mono', monospace;
-  font-size: 1.5rem;
+  font-size: 24px;
   font-weight: 700;
   text-align: right;
 }
@@ -185,7 +172,7 @@ body {
 }
 
 .form__input--as-btn {
-  padding: 0.5rem 10px;
+  padding: 0 10px;
   color: #5e7a7d;
   text-align: right;
 }
@@ -234,18 +221,12 @@ body {
 }
 
 .result-cnt {
+  margin: 0 -10px;
   padding: 2rem;
   border-radius: 15px;
   background-color: #00494d;
   color: #f4fafa;
   overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
 .result-cnt__row {
@@ -258,10 +239,7 @@ body {
 }
 
 .result-cnt__col {
-  min-width: -webkit-max-content;
-  min-width: -moz-max-content;
-  min-width: max-content;
-  padding: 1rem 0;
+  padding: 10px 0;
 }
 
 .result-cnt__col h3 {
@@ -273,18 +251,14 @@ body {
 }
 
 .result-cnt__sum {
-  padding-left: 1rem;
   color: #26c0ab;
-  font-size: 3rem;
-  text-align: right;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 0px;
-          flex: 1 1 0;
+  font-size: 2rem;
+  padding: 0 20px;
+  max-width: 100%;
 }
 
 .result-cnt__reset-btn {
+  width: 100%;
   padding: 5px 0;
   -webkit-transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
   transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
@@ -297,7 +271,6 @@ body {
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
-  margin-top: auto;
 }
 
 .result-cnt__reset-btn:disabled {
@@ -309,32 +282,54 @@ body {
   background-color: #95eadf;
 }
 
-@media only screen and (min-width: 768px) {
-  .form__options-cnt {
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 992px) {
   .site {
-    width: 900px;
-    height: auto;
+    padding: 10vh 0 20vh 0;
   }
   .site-header__logo {
-    margin-bottom: 5rem;
+    margin-bottom: 6rem;
+  }
+  .site-content {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 2rem;
+    border-radius: 20px;
+    width: 70vw;
+    max-width: 1000px;
   }
   .form,
   .result-cnt {
     -webkit-box-flex: 1;
-        -ms-flex: 1 1 0px;
-            flex: 1 1 0;
+        -ms-flex: 1 1 50%;
+            flex: 1 1 50%;
   }
-  .site-content {
-    border-radius: 1.5rem;
+  .form__options-cnt {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
   }
-  .form {
-    padding: 0.5rem;
+  .form__input--as-btn {
+    padding: 0 0 0 5px;
+  }
+  .result-cnt {
+    margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .result-cnt__row {
+    margin-bottom: 20px;
+  }
+  .result-cnt__sum {
+    font-size: 3rem;
+  }
+  .result-cnt__reset-btn {
+    margin-top: auto;
   }
 }
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=styles copy.css.map */
