--- a/styles.scss
+++ b/styles.scss
@@ -20,7 +20,7 @@ $white: hsl(0, 0%, 100%);
 $err-color: rgb(255, 92, 92);
 
 //other
-$input-font-size: 24px;
+$input-font-size: 1.5rem;
 $font-family: 'Space Mono', monospace;
 $border-rad: 6px;
 $btn-transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
@@ -32,51 +32,68 @@ $btn-transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
 }
 
 body {
-	background-color: $light-grayish-cyan;
-	color: $dark-grayish-cyan;
-	font-family: $font-family;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	display: flex; // ok - dla wycentrowania apki na desktopie
+	min-height: 100vh; // nie ok - dla wycentrowania apki na desktopie
+	background-color: $light-grayish-cyan; // ok
+	color: $dark-grayish-cyan; // ok - choć może być tylko na labele
+	font-family: $font-family; // ok
+	justify-content: center; // ok - dla wycentrowania apki na desktopie
+	align-items: center; // ok - dla wycentrowania apki na desktopie
 }
 
 .site {
-	height: 100vh;
-
-	display: flex;
-	flex-direction: column;
+	display: flex; // ok
+	height: 100vh; // ok
+	align-items: center; // ok
+	flex-direction: column; // ok
+	// width: 100%; // ok, zamiennik - width: min(100%, 920px);
+	// max-width: 920px; // ok, zamiennik - width: min(100%, 920px);
 }
 
 .site-header {
-	display: flex;
-	justify-content: center;
+	display: flex; // ok
+	justify-content: center; // ok
+	align-items: center; // ok
+	flex-grow: 1; // ok
 	&__logo {
-		margin: 3rem;
+		margin: 2.5rem; // ok
 	}
 }
 
+.form,
+.result-cnt {
+	flex: 1 1 100%; // ok
+	// flex-basis: 50%;
+	// max-width: calc(
+	// 	460px - 2.6rem
+	// ); // 920px/2 from .site max-width, 1.2rem/2 from gap and 2rem padding
+}
+
 .site-content {
-	display: flex;
-	padding: 2rem;
-	border-radius: 20px 20px 0 0;
-	background-color: $white;
-	flex-direction: column;
-	gap: 1rem;
-	flex-grow: 1;
-	box-shadow: 10px 10px 20px -15px $dark-grayish-cyan2;
+	display: flex; // ok
+	padding: 1.75rem; // ok
+	border-radius: 1.5rem 1.5rem 0 0; // ok
+	background-color: $white; // ok
+	// flex-grow: 1;
+	box-shadow: 10px 10px 1.5rem -15px $dark-grayish-cyan2; // ok
+	// flex-direction: column;
+	flex-wrap: wrap; // ok
+	gap: 1rem; // ok
 }
 
 %as-btn {
-	display: inline-block;
-	width: 100%;
-	padding: 6px;
-	border-radius: $border-rad;
-	font-size: $input-font-size;
-	font-weight: 700;
-	cursor: pointer;
+	display: inline-block; // ok
+	// max-width: 8rem;
+	width: 100%; // ok
+	padding: 0.5rem 0; // ok
+	border-radius: $border-rad; // ok
+	font-size: $input-font-size; // ok
+	font-weight: 700; // ok
+	cursor: pointer; // ok
 }
 
 %placeholder-opacity {
+	// ok
 	&::-webkit-input-placeholder {
 		opacity: 0.75;
 	}
@@ -92,13 +109,14 @@ body {
 }
 
 .form {
-	display: flex;
-	flex-direction: column;
-	gap: 2rem;
+	display: flex; // ok
+	padding: 0 0.5rem; // ok
+	flex-direction: column; // ok
+	gap: 2rem; // ok
 	&__options-cnt {
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		gap: 1.2rem;
+		display: grid; // ok
+		grid-template-columns: repeat(2, 1fr); // ok
+		gap: 1.2rem; // ok
 	}
 	&__input-cnt {
 		display: flex;
@@ -152,9 +170,10 @@ body {
 			}
 		}
 		&--as-btn {
-			padding: 0 10px;
+			padding: 0.5rem 10px;
 			color: $dark-grayish-cyan;
 			text-align: right;
+			@extend %as-btn;
 			@extend %placeholder-opacity;
 			&::-webkit-input-placeholder {
 				text-align: center;
@@ -168,7 +187,6 @@ body {
 			&:-ms-input-placeholder {
 				text-align: center;
 			}
-			@extend %as-btn;
 		}
 	}
 	&__label {
@@ -198,104 +216,149 @@ body {
 }
 
 .result-cnt {
-	margin: 0 -10px;
+	// margin: 0 -10px;
 	padding: 2rem;
 	border-radius: 15px;
 	background-color: $very-dark-cyan;
 	color: $light-grayish-cyan2;
 	overflow: hidden;
+	// word-wrap: break-word;
+	display: flex;
+	flex-direction: column;
 	&__row {
 		display: flex;
 		justify-content: space-between;
 	}
 	&__col {
-		padding: 10px 0;
+		min-width: max-content;
+		padding: 1rem 0; //ok
 		& h3 {
-			font-size: 1rem;
+			font-size: 1rem; //ok
 		}
 		& p {
-			color: $dark-grayish-cyan2;
+			color: $dark-grayish-cyan2; //ok
 		}
 	}
 	&__sum {
-		color: $primary-color;
-		font-size: 2rem;
-		padding: 0 20px;
-		max-width: 100%;
+		// min-width: 0;
+		padding-left: 1rem; //ok
+		color: $primary-color; //ok
+		font-size: 3rem; //ok
+		text-align: right; //ok
+		text-overflow: ellipsis; //ok
+		overflow: hidden; //ok
+		flex: 1 1 0; // ok
+		// justify-self: end;
+		// max-height: 3ch;
 	}
 	&__reset-btn {
-		width: 100%;
-		padding: 5px 0;
-		transition: $btn-transition;
-		border: none;
-		border-radius: $border-rad;
-		background-color: $primary-color;
-		color: $very-dark-cyan;
-		font-family: $font-family;
-		font-size: 1.5rem;
-		font-weight: 700;
-		text-transform: uppercase;
-		cursor: pointer;
+		// width: 100%;
+		padding: 5px 0; //ok
+		transition: $btn-transition; //ok
+		border: none; //ok
+		border-radius: $border-rad; // ok
+		background-color: $primary-color; //ok
+		color: $very-dark-cyan; //ok
+		font-family: $font-family; //ok
+		font-size: 1.5rem; //ok
+		font-weight: 700; //ok
+		text-transform: uppercase; //ok
+		cursor: pointer; // ok
+		margin-top: auto; // ok
 		&:disabled {
-			background-color: $very-dark-cyan-disabled;
-			color: adjust-color($color: $very-dark-cyan, $lightness: 4%);
+			background-color: $very-dark-cyan-disabled; // ok
+			color: adjust-color($color: $very-dark-cyan, $lightness: 4%); //ok
 		}
 		&:active {
-			background-color: $primary-color-active;
+			background-color: $primary-color-active; // ok
 		}
 	}
 }
 
-@media only screen and (min-width: 992px) {
-	.site {
-		padding: 10vh 0 20vh 0;
-	}
-
-	.site-header {
-		&__logo {
-			margin-bottom: 6rem;
-		}
-	}
-
-	.site-content {
-		flex-direction: row;
-		gap: 2rem;
-		border-radius: 20px;
-		width: 70vw;
-		max-width: 1000px;
-	}
-
-	.form,
-	.result-cnt {
-		flex: 1 1 50%;
-	}
-
+@media only screen and (min-width: 768px) {
 	.form {
 		&__options-cnt {
 			grid-template-columns: repeat(3, 1fr);
 		}
-		&__input {
-			&--as-btn {
-				padding: 0 0 0 5px;
-			}
+	}
+}
+
+@media only screen and (min-width: 900px) {
+	.site {
+		width: 900px;
+		height: auto;
+	}
+
+	.site-header {
+		&__logo {
+			margin-bottom: 5rem;
 		}
 	}
 
+	.form,
 	.result-cnt {
-		margin: 0;
-		display: flex;
-		flex-direction: column;
-		&__row {
-			margin-bottom: 20px;
-		}
-		&__sum {
-			font-size: 3rem;
-		}
-		&__reset-btn {
-			margin-top: auto;
-		}
+		flex: 1 1 0;
+	}
+
+	.site-content {
+		border-radius: 1.5rem;
+	}
+
+	.form {
+		padding: 0.5rem;
 	}
 }
+
+// @media only screen and (min-width: 992px) {
+// 	.site {
+// 		padding: 10vh 0 20vh 0;
+// 	}
+
+// 	.site-header {
+// 		&__logo {
+// 			margin-bottom: 6rem;
+// 		}
+// 	}
+
+// 	.site-content {
+// 		flex-direction: row;
+// 		gap: 2rem;
+// 		border-radius: 20px;
+// 		width: 70vw;
+// 		max-width: 1000px;
+// 	}
+
+// 	.form,
+// 	.result-cnt {
+// 		flex: 1 1 50%;
+// 	}
+
+// 	.form {
+// 		&__options-cnt {
+// 			grid-template-columns: repeat(3, 1fr);
+// 		}
+// 		&__input {
+// 			&--as-btn {
+// 				padding: 0 0 0 5px;
+// 			}
+// 		}
+// 	}
+
+// 	.result-cnt {
+// 		margin: 0;
+// 		display: flex;
+// 		flex-direction: column;
+// 		&__row {
+// 			margin-bottom: 20px;
+// 		}
+// 		&__sum {
+// 			font-size: 3rem;
+// 		}
+// 		&__reset-btn {
+// 			margin-top: auto;
+// 		}
+// 	}
+// }
 
 // .attribution {
 // 	font-size: 11px;
