--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 1.75rem;
+  padding: Min(4vw, 1.75rem);
   border-radius: 1.5rem 1.5rem 0 0;
   background-color: white;
   -webkit-box-shadow: 10px 10px 1.5rem -15px #7f9c9f;
@@ -234,7 +234,7 @@ body {
 }
 
 .result-cnt {
-  padding: 2rem;
+  padding: Min(5vw, 2rem);
   border-radius: 15px;
   background-color: #00494d;
   color: #f4fafa;
@@ -265,7 +265,7 @@ body {
 }
 
 .result-cnt__col h3 {
-  font-size: 1rem;
+  font-size: 1em;
 }
 
 .result-cnt__col p {
@@ -273,9 +273,9 @@ body {
 }
 
 .result-cnt__sum {
-  padding-left: 1rem;
+  padding-left: Min(2vw, 1rem);
   color: #26c0ab;
-  font-size: 3rem;
+  font-size: 3em;
   text-align: right;
   text-overflow: ellipsis;
   overflow: hidden;
