--- a/styles.scss
+++ b/styles.scss
@@ -130,13 +130,13 @@ body {
 				outline-color: $primary-color-active;
 			}
 			&--dollar {
-				background: url('/images/icon-dollar.svg');
+				background-image: url('/images/icon-dollar.svg');
 				background-repeat: no-repeat;
 				background-position: 20px;
 				@extend .form__input--number;
 			}
 			&--person {
-				background: url('/images/icon-person.svg');
+				background-image: url('/images/icon-person.svg');
 				background-repeat: no-repeat;
 				background-position: 20px;
 				@extend .form__input--number;
