--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ body {
 .form__input--number, .form__input--number--dollar, .form__input--number--person {
   width: 100%;
   padding: 6px 6px 6px 38px;
-  border: none;
+  border: 2px solid transparent;
   border-radius: 6px;
   background-color: #f4fafa;
   color: #00494d;
